fix firefox alignment

--- a/app/styles/override.css
+++ b/app/styles/override.css
@@ -42,3 +42,9 @@
 	--default-font-family: "Nacelle";
 	--heading-font-family: "Nacelle";
 }
+
+@-moz-document url-prefix() {
+  .rt-IconButton {
+    transform: translateY(-1px);
+  }
+}
